--- a/about/index.html
+++ b/about/index.html
@@ -52,13 +52,10 @@
     <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
     <div class="mission-content">
       
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-          incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus
-          commodo viverra maecenas accumsan lacus vel facililsis.</p>
+      <p>Escape the digital grind and immerse yourself in a serene retreat designed to rejuvenate your mind and spirit. Our retreat offers a sanctuary free from the constant buzz of computer devices, allowing you to reconnect with nature, indulge in mindful practices, and embrace the present moment. Nestled in a picturesque setting, you'll enjoy tranquil walks, invigorating yoga sessions, and inspiring workshops, all aimed at promoting inner peace and personal growth.
+          </p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-          incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus
-          commodo viverra maecenas accumsan lacus vel facililsis.</p>
+        <p>Leave your screens behind and discover the joy of genuine human connection and self-discovery. Our retreat provides a rare opportunity to unplug and experience life without the distractions of technology. With a focus on holistic wellness, you'll nourish your body with healthy, delicious meals, engage in creative activities, and find solace in the beauty of your surroundings. Join us for a transformative experience that will leave you refreshed, recharged, and inspired.</p>
 
  
 
