--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <article>
     <!---wifi icon-->
       <p class="fontawesome-icon"></p>
-      <p class="features-items-description"></p>"Dedicated computer room for times that you must wifi.></p>
+      <p class="features-items-description"></p>Dedicated computer room for times that you must wifi.</p>
         </article>
         
        </div>     <!---end of features-items wrapper-->
