--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="content-wrapper">
   
       
-        <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+      <!---  <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>  --code temp commented out-->
     
 
      <div class="header-divider"></div>
