changes to width content-wrapper

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
     <div class="footer-contact">  <!---begin footer contact div-->
     
-        <div class="contact">
+        <div class="contact-content">
           <h4>Contact</h4>
           <address>
               <p>555-555-5555<br>
