added width, padding and margins

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <section class="hero-area">
     <div class="content-wrapper">
       <figure>    <!---not in the solution-->
-        <a href="#"><img src="img/unpluggedretreat.jpg" alt="unplugged hero image"></a>
+       <!---- <a href="#"><img src="img/unpluggedretreat.jpg" alt="unplugged hero image"></a>--->
       </figure>   <!---not in the solution-->
 
 
@@ -169,7 +169,7 @@
         </div>  <!--end contact div -->
 
 
-        <div class="social">
+        <div class="social-icons">
 
                 <h4>Social</h4> 
                     <!--facebook icon-->              <!--enter in real link!!!-->
