making changes to css margins and widths

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <!--tumbler icon this is real link  /  fix this it is instagram!!!-->
                 <p><a href="https://www.tumblr.com/blog/plumpirishchick"><img src="img/tumblr.png" alt="tumblr icon"/></a></p>
                     
-        </div> <!--social div ending-->
+        </div> <!--social-icons div ending-->
   
     </div>   <!--footer content-wrapper div ending-->
   
