added media queries for tablet and desktop

--- a/index.html
+++ b/index.html
@@ -144,12 +144,9 @@
         <h3>October 2018</h3>
 
         <p>This is the LaCrue Bottling Company team and their retreat photo.<br>
-          The Unplugged retreat was an unforgettable experience that truly lived up to its name. Nestled in the serene countryside, this retreat offered a perfect escape from the hustle and bustle of everyday life. From the moment we arrived, we were welcomed with warm hospitality and an inviting atmosphere.<br>
-
-          The activities were thoughtfully curated, providing a perfect balance of relaxation and engagement. Whether it was the invigorating morning yoga sessions, the insightful workshops on mindfulness and wellness, or the leisurely nature walks, each moment was designed to help us reconnect with ourselves and nature.<br>
+          The Unplugged retreat was an unforgettable experience that truly lived up to its name. Nestled in the serene countryside, this retreat offered a perfect escape from the hustle and bustle of everyday life.<br>
+           From the moment we arrived, we were welcomed with warm hospitality and an inviting atmosphere.Whether it was the invigorating morning yoga sessions, the insightful workshops on mindfulness and wellness, or the leisurely nature walks, each moment was designed to help us reconnect with ourselves and nature.<br>
           
-          What truly set this retreat apart was the sense of community it fostered. We had the opportunity to connect with like-minded individuals, share stories, and form lasting friendships.<br> 
-
           Unplugged is not just a retreat; it was a transformative experience that left us feeling rejuvenated and inspired. </p>
 
     </div>
