--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
   <!-- Place favicon.ico in the root directory -->
 
   <!---Google Fonts-!>
-  <!-Open Sans-->
+
+ <!-Open Sans-and Poppins font together-->
+
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:
 400,700|Poppins:500,700" rel="stylesheet">
 
-<!--Poppins font-->
-
+<!--CSS stylesheets link -->
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
