--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
+  
 </head>
 
 <body>
@@ -37,9 +37,11 @@
   
     <div class="content-wrapper">
   
-      
+      <figure>
+
      <!---  <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>--->
     
+    </figure>
 
      <div class="header-divider"></div>
  
