adding hero image

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <section class="hero-area">
     <div class="content-wrapper">
       <figure>    <!---not in the solution-->
-       <!---- <a href="#"><img src="img/unpluggedretreat.jpg" alt="unplugged hero image"></a>--->
+        <a href="#"><img src="img/unplugged-retreat.jpg" alt="unplugged hero image"></a>
       </figure>   <!---not in the solution-->
 
 
