--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,7 @@
   
       <figure>
 
-     <!---  <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>--->
+      <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
     
     </figure>
 
@@ -50,12 +50,12 @@
     <ul>
       <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
 
-      <li><a href="index.html" target="_blank">About</a></li>
+      <li><a href="index.html" target="_blank">ABOUT</a></li>
     </ul>
   </nav>
 
 </div>
-</header>
+</header>   <!--ABOUT PAGE-->
 
 <main>
 
@@ -76,12 +76,18 @@
 
 </section>     <!---end of section mission -->
 
-<section class="map">  <!---start of map-->
-  <figure>
-     
-  </figure>
+             <!---start of map-->
+  
+<section class="map-container">
 
-</section>  <!--about page-->
+  <figure>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3062.0780501557883!2d-75.6777363779718!3d39.872489581422656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1723005950859!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+</figure>
+
+</section>  <!---end map container-->
+ <!--about page-->
 
 <section class="contact-section">
   <div class="content-wrapper">  <!--begin content wrapper div-->
