--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,11 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 
+  <!--Font Awesome Icons-->
+  <script src="https://kit.fontawesome.com/8340ad58e8.js" crossorigin="anonymous"></script>
   
+
+
 </head>
 
 <body>
