#37 added social icons to all pages

--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@
 
                 <h4>Social</h4> 
                     <!--facebook icon-->              <!--enter in real link!!!-->
-                <p><a href="https://www.facebook.com/yoursite" target="_blank"><i class="fa-brands fa-facebook-f fa-2xs" style="color:#ffffff"></i></a></p>
+                <p><a href="https://www.facebook.com/peg.ferry.9" target="_blank"><i class="fa-brands fa-facebook-f fa-sm" style="color: #ffffff;"></i></a></p>
             
                     <!--twitter icon-->   <!--this is real twitter link-->
-                <p><a href="https://twitter.com/peggyferry" target="_blank"></a></p>
+                <p><a href="https://x.com/home?lang=en" target="_blank"><i class="fa-brands fa-twitter fa-sm" style="color: #ffffff;"></i></a></p>
 
-                    <!--tumbler icon this is real link  /  fix this it is instagram!!!-->
-                <p><a href="https://www.tumblr.com/blog/plumpirishchick" target="_blank"></a></p>
+                    <!--instagram icon this is real link  /  fix this it is instagram!!!-->
+                <p><a href="https://www.instagram.com/peggy_ferry1702/" target="_blank"><i class="fa-brands fa-instagram fa-sm" style="color: #ffffff;"></i></a></p>
                     
         </div> <!--social-icons div ending-->
   
