#39 website looks great! everything done!

--- a/faq/index.html
+++ b/faq/index.html
@@ -100,7 +100,7 @@
 <footer>
   <div class="content-wrapper"> <!--begin content wrapper div-->
 
-    <div class="footer-contact">  <!---begin footer contact div-->
+    <div class="footer-content">  <!---begin footer contact div-->
     
                         <div class="contact">
           <h4>Contact</h4>
