--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <footer>
   <div class="content-wrapper"> <!--begin content wrapper div-->
 
-    <div class="footer-contact">  <!---begin footer contact div-->
+    <div class="footer-content">  <!---begin footer contact div-->
     
             <div class="contact">     <!--contact div over-->
           <h4>Contact</h4>
